page présentation de l'évènement

--- a/app/views/static_pages/contacts/_contact.html.erb
+++ b/app/views/static_pages/contacts/_contact.html.erb
@@ -1,6 +1,6 @@
 
 <div class="panel transparent">
-  <div class="panel-body text-center">
+  <div class="panel-body text-center bold">
     <h1 class="contact-title"><%= t("#{contacttag}.name") %> </h1>
   </div>
 </div>
