--- a/app/views/static_pages/partenaires.html.erb
+++ b/app/views/static_pages/partenaires.html.erb
@@ -1,6 +1,6 @@
 
 <div class="panel transparent">
-  <div class="panel-body text-center">
+  <div class="panel-body text-center bold">
     <h1><%= t(:partenaires) %></h1>
   </div>
 </div>
