--- a/app/views/static_pages/presentation.html.erb
+++ b/app/views/static_pages/presentation.html.erb
@@ -1,13 +1,52 @@
 
 <div class="panel transparent">
-  <div class="panel-body text-center">
+
+  <div class="panel-heading text-center bold">
     <h1>Présentation de l'évènement</h1>
+  </div>
+
+  <div class="panel-body">
+
+    <h3>Evry Games City, c’est le rendez-vous « jeunesse » pour tous , curieux, amateurs, ou passionnés du jeu vidéo en France.</h3>
+    <span>Pour la première édition, l’Ensiie voit grand en créant en partenariat avec la Mairie l’événement jeu video. Des compétitions, des animations, des rencontres et plus de 2 000 visiteurs attendus sur 2 jours les 25 et 26 Avril 2015 aux Arènes de l’Agora à Evry Centre Essonne</span>
+
+    <h3>Une expérience « so gaming »</h3>
+    <ul>
+      <li>Une gaming zone , le village des gamers et des éditeurs, ouverte à tous petits et grands, pour vivre un moment unique autour de toutes les nouveautés, des zones de test, des bornes de jeu en libre service.</li>
+      <li>Des live show</li>
+    </ul>
+
+    <h3>Un main event en apothéose</h3>
+    <ul>
+      <li>La lanparty géante organisée avec le soutien opérationnel de l’EGS , qui permettra aux 200 meilleurs gamers du moment de se mesurer en live pendant 2 jours avec des guest stards du jeu video sur une track list exceptionnelle : Counter Strike Global Offensive, League of Legends, Starcraft 2 et Hearthstone</li>
+      <li>Une grande finale Dimanche 26 Avril avec des cash prize à la hauteur de l’événement avec plus de 10 000 eur  de dotation mise en jeux</li>
+    </ul>
+ 
+  </div>
+</div>
+
+
+
+<div class="panel transparent">
+  <div class="panel-heading text-center bold">
+    <h1>Evry, ville numérique</h1>
+  </div>
+  <div class="panel-body">
+    <span>...</span>
   </div>
 </div>
 
 
 <div class="panel transparent">
+  <div class="panel-heading text-center bold">
+    <h1>L’ENSIIE, grande école d’excellence</h1>
+  </div>
   <div class="panel-body">
-    <h4>Evry Games City, c’est le rendez-vous « jeunesse » pour tous , curieux, amateurs, ou passionnés du jeu vidéo en France.</h4> 
+    <span>L’ENSIIE (École Nationale Supérieure d’Informatique pour l’Industrie et l’Entreprise) est une des plus anciennes écoles délivrant le diplôme d’ingénieur en informatique. Depuis sa création, en 1968, l’ENSIIE a formé près de 3000 ingénieurs qui irriguent tous les secteurs des entreprises.<br />
+L’ENSIIE fait partie intégrante de la Communauté d’université et d’Etablissement de Paris Saclay au même titre que les grandes écoles du site  (Polytechnique, ENSTA, Télécom Paristech ou Centrale Paris).<br /><br />
+
+Depuis la rentrée, l ‘école propose une nouvelle filière : jeux video, interactions et collaborations numériques. L’ objectif  est de former des cadres supérieurs scientifiques, compétents dans le domaine des intéractions et collaborations numériques, disposant d’une expérience de travail avec des créatifs : artistes, compositeurs, designers…
+
+    </span>
   </div>
 </div>
