informations, partie fougere

--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -95,7 +95,7 @@
           Tarif réduit - jeune (7 - 18ans inclus) : 11€<br />
           Tarif réduit - étudiant : 11€<br />
           Journée du samedi pour tous : 16€
-          <h3>Lanpartie :</h3>
+        <h4>Lanpartie :</h4>
           Préinsciption : 50 € par équipe 
         </p> 
       </div>
@@ -112,10 +112,20 @@
 
     <div class="panel transparent"><!-- Services -->
       <div class="panel-heading">
-        <%= render partial: 'static_pages/informations/info_subsection', locals: {infotag: :infoservice} %>
+        <h4>Services</h4>
       </div>
       <div class="panel-body">
-        <p><%= t("infoservice.text") %></p>
+        <p>Des serveurs funs seront mis en place pour tous ceux qui souhaitent se détendre entre 2 parties ou tout simplement jouer avec les personnes présentes :</p>
+        <ul>
+          <li>Tworlds</li>
+          <li>CS Source</li>
+          <li>Trackmania</li>
+          <li>Team Forteress 2</li>
+        </ul>
+        <p>Des câbles et des PC seront disponibles à la location sur place, dans la limite des stocks disponibles.<br />
+           Un <%= link_to "Hôtel Ibis", "http://www.ibis.com/fr/hotel-1986-ibis-styles-evry-cathedrale/index.shtml"%> se situe à proximité.<br />
+           De nombreux restaurants du Centre Commercial Evry 2 situé à proximité seront disponibles.</p>
+        
       </div>
     </div>
 
