jeux renamed en tournois, et nouvelles bannieres

--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -29,21 +29,7 @@
   <div class="col-md-6 left-column">
 
 
-    <div class="panel transparent"><!-- Où ? -->
-      <div class="panel-heading">
-        <!--div class="anchor">
-          <a name="<%#= infotag %>"> </a>
-        </div-->
-       <!--h4 class="info-title" name="<%#= infotag %>"><%#= t("#{infotag}.name") %> </h4-->
-        <h4>Déroulé</h4>
-      </div>
-      <div class="panel-body">
-        <p>Samedi 25 Avril : phases de qualification<br />
-           Dimanche 26 Avril : finale</p>
-      </div>
-    </div>
-
-    <div class="panel transparent">
+      <div class="panel transparent">
       <div class="panel-heading">
         <h4>Horaires</h4>
       </div>
@@ -52,6 +38,21 @@
            De 09h00 à minuit.</p>
       </div>
     </div>
+
+    <div class="panel transparent">
+      <div class="panel-heading">
+        <!--div class="anchor">
+          <a name="<%#= infotag %>"> </a>
+        </div-->
+       <!--h4 class="info-title" name="<%#= infotag %>"><%#= t("#{infotag}.name") %> </h4-->
+        <h4>Déroulement de la LAN</h4>
+      </div>
+      <div class="panel-body">
+        <p>Samedi 25 Avril : phases de qualification<br />
+           Dimanche 26 Avril : finales</p>
+      </div>
+    </div>
+
 
     <div class="panel transparent">
       <div class="panel-heading">
