--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -47,7 +47,7 @@
         <li class="dropdown <%= set_active("jeux") %>">
           <a href="#" class="dropdown-toggle navlink" data-toggle="dropdown"
                      role="button" aria-expanded="false">
-            <%= t(:jeux) %><span class="caret"></span>
+            Tournois<span class="caret"></span>
           </a>
           <ul class="dropdown-menu" role="menu">
             <li><%= link_to t('csgo.name'), jeux_csgo_path %></li>
@@ -73,9 +73,9 @@
         <li class="<%= set_active("partenaires")%>">
           <a class="navlink" href="/partenaires"><%= t(:partenaires) %></a>
         </li>
-        <li class="<%= set_active("reglement")%>">
+        <!--li class="<%= set_active("reglement")%>">
           <a class="navlink" href="/reglement"><%= t(:reglement)%></a>
-        </li>
+        </li-->
       </ul>
 
 
