--- a/app/views/jeux/_jeu.html.erb
+++ b/app/views/jeux/_jeu.html.erb
@@ -1,6 +1,9 @@
 <div class="panel panel-default banniere-game">
   <div class="panel-body">
     <%= image_tag t("#{gametag}.banniere"), class: "img-responsive" %>
+    <div class="game-title text-center col-md-12">
+      <h1 class="bold"><%= t("#{gametag}.name") %></h1>
+    </div>
   </div>
 </div>
 
