--- a/app/views/jeux/csgo.html.erb
+++ b/app/views/jeux/csgo.html.erb
@@ -1,1 +1,30 @@
-<%= render partial: 'jeux/jeu', locals: {gametag: :csgo} %>
+
+<div class="panel panel-default banniere-game">
+  <div class="panel-body">
+    <%= image_tag t("csgo.banniere"), class: "img-responsive" %>
+    <div class="game-title text-center col-md-12">
+      <h1 class="bold"><%= t("csgo.name") %></h1>
+    </div>
+  </div>
+</div>
+
+
+
+<div class="panel transparent">
+  <div class="panel-heading">
+    <h4>Règles</h4>
+  </div>
+  <div class="panel-body">
+    <h2>Tournoi 16 slots avec des qualifications online.</h3>
+    <big>Déroulement  sur place : </big><br />
+    <ul>
+      <li>Phase de poule en BO1</li>
+      <li>Déroulement du tournoi à partir des quarts de finales en BO3</li>
+      <li>Finale en BO5</li>
+
+  </div>
+</div>
+
+
+<%= render partial: 'jeux/jeu_subsection', locals: { gametag: :csgo, categ: :materiel} %>
+<%= render partial: 'jeux/jeu_subsection', locals: { gametag: :csgo, categ: :recompenses} %>
