--- a/app/views/static_pages/contacts/_contact.html.erb
+++ b/app/views/static_pages/contacts/_contact.html.erb
@@ -19,18 +19,18 @@
 </div>
 
 
-<div class="panel transparent">
+<!--div class="panel transparent">
 
   <div class="panel-heading">
-    <h4 class="contact-lequipe-title"><%= t(:lequipe) %></h4>
+    <h4 class="contact-lequipe-title"><%#= t(:lequipe) %></h4>
   </div>
  
   <div class="panel-body">
-    <p><%= t("#{contacttag}.membre1") %></p>
-    <p><%= t("#{contacttag}.membre2") %></p>
+    <p><%#= t("#{contacttag}.membre1") %></p>
+    <p><%#= t("#{contacttag}.membre2") %></p>
   </div>
 
-</div>
+</div-->
 
 
 <div class="panel transparent">
