--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -73,9 +73,9 @@
         <li class="<%= set_active("partenaires")%>">
           <a class="navlink" href="/partenaires"><%= t(:partenaires) %></a>
         </li>
-        <!--li class="<%= set_active("reglement")%>">
-          <a class="navlink" href="/reglement"><%= t(:reglement)%></a>
-        </li-->
+        <li class="<%= set_active("presse")%>">
+          <a class="navlink" href="/presse">Presse</a>
+        </li>
       </ul>
 
 
