--- a/app/views/static_pages/informations/_info_mosaique.html.erb
+++ b/app/views/static_pages/informations/_info_mosaique.html.erb
@@ -13,7 +13,7 @@
     </div>
 
 
-      <div class="panel-body">
+      <div class="panel-body text-center">
         <%= image_tag t("#{infotag}.logo"), class: "infologo-center" %>
         <div class="info-text"><%= t("#{infotag}.mosaique-text") %></div>
       </div>
