--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -10,10 +10,16 @@ body {
   color: white;
   font-family: 'helvetica';
   background-color: black;
-  background-image: image-url("Site_EGC_Background2_copy.jpg");
   //background-size: cover;
   background-repeat: no-repeat;
   background-position: center top;
+}
+
+body.with-persos {
+  background-image: image-url("Site_EGC_Background2_copy.jpg"); 
+}
+body.without-persos {
+  background-image: image-url("Site_EGC_Background3_copy.jpg"); 
 }
 
 .bold {
