--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body class="<%=  params[:action] == "home" ? "with-persos" : "without-persos" %>">
   <%= render 'layouts/header' %>
   <div class="container">
     <%= yield %>
