instagram hashtag remplacé en apparence

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -42,8 +42,8 @@
       <div class="row">
         <div class="col-md-12 mosaique instagram">
           <div class="panel transparent">
-            <div class="panel-heading">
-              <h4>Instagram #EGC2015</h4>
+            <div class="panel-heading text-center">
+              <h4>Instagram #EVRYGAMESCITY</h4>
             </div>
             <div class="panel-body">
               <!-- www.intagme.com -->
