--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -59,11 +59,11 @@
         <h4>Accès</h4>
       </div>
       <div class="panel-body">
-        <p><h3>Adresse :</h3> Arènes de l'Agora, 91000 Évry.<br />
+        <p><h3>Adresse :</h3> Arènes de l'Agora, 91000 Évry.<br /><br />
            <h3>Par le RER D :</h3>
            Paris gare du Nord/Châtelet/Gare de Lyon direction Corbeil – Malesherbes station Evry-Courcouronnes, sortie Agora (à 5 minutes des Arènes).<br />
            <h3>Par la route :</h3>
-           <big>A6 depuis Paris :</big> direction Lyon, sortie Evry puis direction Agora par le boulevard de l'Europe / Francilienne depuis Corbeil-Essonnes : sortie Bois Briard depuis Fleury-Mérogis, sortie Evry puis direction Agora par le boulevard de l'Europe.<br />
+           <big>A6 depuis Paris :</big> direction Lyon, sortie Evry puis direction Agora par le boulevard de l'Europe / Francilienne depuis Corbeil-Essonnes : sortie Bois Briard depuis Fleury-Mérogis, sortie Evry puis direction Agora par le boulevard de l'Europe.<br /><br />
            <big>Autobus TICE :</big> arrêt Gare SNCF ou Agora</p>
       </div>
     </div>
@@ -95,8 +95,8 @@
           Plein tarif : 16€<br />
           Tarif réduit - jeune (7 - 18ans inclus) : 11€<br />
           Tarif réduit - étudiant : 11€<br />
-          Journée du samedi pour tous : 16€
-        <h4>Lanpartie :</h4>
+          Journée du samedi pour tous : 16€<br />
+        <h3>Joueurs :</h3>
           Préinsciption : 50 € par équipe 
         </p> 
       </div>
