instagram hashtag remplacé

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -43,11 +43,11 @@
         <div class="col-md-12 mosaique instagram">
           <div class="panel transparent">
             <div class="panel-heading text-center">
-              <h4>Instagram #EVRYGAMESCITY</h4>
+              <h4><%= image_tag "Instagram_Menu_icon_1.png", alt: "Instagram", style: "margin-top: -5px; margin-right: 5px;" %>#EVRYGAMESCITY</h4>
             </div>
             <div class="panel-body">
-              <!-- www.intagme.com -->
-              <iframe class="center-block" src="http://www.intagme.com/in/?h=ZWdjMjAxNXxzbHwzMDB8MnwzfHx5ZXN8NXx1bmRlZmluZWR8eWVz" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:300px; height: 315px" ></iframe>
+              <!-- SnapWidget -->
+              <iframe class="center-block" src="http://snapwidget.com/sl/?u=ZXZyeWdhbWVzY2l0eXxpbnwzMTV8M3wzfHxub3w1fG5vbmV8b25TdGFydHx5ZXN8bm8=&ve=171214" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:300px; height:300px"></iframe>
             </div>
           </div>
         </div>
