police du menu moins large

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -30,7 +30,7 @@
       padding: 0px;
     }
     .panel-heading h4 {
-      font-family: 'eurostyle';
+      font-family: 'helvetica';
     }
   } 
 }
