--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -43,7 +43,7 @@
         <div class="col-md-12 mosaique instagram">
           <div class="panel transparent">
             <div class="panel-heading text-center">
-              <h4><%= image_tag "Instagram_Menu_icon_1.png", alt: "Instagram", style: "margin-top: -5px; margin-right: 5px;" %>#EVRYGAMESCITY</h4>
+              <h4><%= image_tag "Instagram_Menu_icon_1.png", alt: "Instagram", style: "margin-top: -5px; margin-right: 5px;" %>INSTAGRAM #EVRYGAMESCITY</h4>
             </div>
             <div class="panel-body">
               <!-- SnapWidget -->
