--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -51,8 +51,8 @@ h1, .h1, h2, .h2, h3, .h3 {
 
 .navbar-inverse {
   font-family: 'bebas';
-  letter-spacing: 2px;
-  font-weight: bold;
+  letter-spacing: 1px;
+  //font-weight: bold;
 
   background-color: $bleu-gris;
   * { color: white !important; }
