teeworlds etait mal ecrit

--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -118,7 +118,7 @@
       <div class="panel-body">
         <p>Des serveurs funs seront mis en place pour tous ceux qui souhaitent se détendre entre 2 parties ou tout simplement jouer avec les personnes présentes :</p>
         <ul>
-          <li>Tworlds</li>
+          <li>TeeWorlds</li>
           <li>CS Source</li>
           <li>Trackmania</li>
           <li>Team Forteress 2</li>
