header home + image presentation + slideshow 4

--- a/app/views/static_pages/presentation.html.erb
+++ b/app/views/static_pages/presentation.html.erb
@@ -7,6 +7,8 @@
 
   <div class="panel-body">
 
+    <%= image_tag "Header_presentation_horizontal.jpg", class: "img-responsive" %>
+
     <h3>Evry Games City, c’est le rendez-vous « jeunesse » pour tous , curieux, amateurs, ou passionnés du jeu vidéo en France.</h3>
     <span>Pour la première édition, l’Ensiie voit grand en créant en partenariat avec la Mairie l’événement jeu video. Des compétitions, des animations, des rencontres et plus de 2 000 visiteurs attendus sur 2 jours les 25 et 26 Avril 2015 aux Arènes de l’Agora à Evry Centre Essonne</span>
 
