--- a/app/views/static_pages/home/_carousel.html.erb
+++ b/app/views/static_pages/home/_carousel.html.erb
@@ -5,6 +5,7 @@
     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
   </ol>
  
   <!-- Wrapper for slides -->
@@ -24,6 +25,12 @@
     </div>
     <div class="item">
       <%= image_tag "SlideShow_EGC_3.jpg", alt: "..." %>
+      <div class="carousel-caption">
+          <h3></h3>
+      </div>
+    </div>
+    <div class="item">
+      <%= image_tag "SlideShow_EGC_4.jpg", alt: "..." %>
       <div class="carousel-caption">
           <h3></h3>
       </div>
