--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,24 @@
   <%= csrf_meta_tags %>
 </head>
 <body class="<%=  params[:action] == "home" ? "with-persos" : "without-persos" %>">
+
   <%= render 'layouts/header' %>
+
+
+
   <div class="container">
+    <% flash.each do |key, value| %>
+      <%= content_tag(:div, value, class:"alert alert-#{key}") %>
+    <% end %>
+
+
+
     <%= yield %>
+
   </div>
+
+
+
   <%= render 'layouts/footer' %>
 
 </body>
