carousel multi slide bof

--- a/app/views/static_pages/partenaires/_partenaire_mosaique.html.erb
+++ b/app/views/static_pages/partenaires/_partenaire_mosaique.html.erb
@@ -1,9 +1,9 @@
 
-<div class="col-md-2 mosaique partenaire"> 
+<div class="mosaique partenaire"> 
   <div class="panel transparent">
     <div class="panel-body">
       <a href="<%= t("partenaire-#{i}.url") %>" target="_blank">
-        <%= image_tag t("partenaire-#{i}.image"), class: "center-block", alt: t("partenaire-#{i}.name") %>
+        <%= image_tag t("partenaire-#{i}.image"), class: "center-block img-responsive", alt: t("partenaire-#{i}.name") %>
       </a>
     </div>    
 
