--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -91,9 +91,7 @@
 
 
   <div class="row partenaires">
-   <% (1..4).each do |i| %>
-      <%= render partial: 'static_pages/partenaires/partenaire_mosaique', locals: { i:i} %>
-   <% end  %>
+    <%= render "static_pages/partenaires/partenaire_carousel" %>
   </div>
   <!-- div class="row partenaires">
     <%#= render partial: 'static_pages/home/partenaires_carousel' %>
