--- a/app/views/static_pages/partenaires.html.erb
+++ b/app/views/static_pages/partenaires.html.erb
@@ -6,24 +6,13 @@
 </div>
 
 
-  <div class="row partenaires">
+  <!--div class="row partenaires">
    <% (1..4).each do |i| %>
       <%= render partial: 'static_pages/partenaires/partenaire_mosaique', locals: { i:i} %>
    <% end  %>
-  </div>
+  </div-->
 
-
-<div class="jcarousel" data-jcarousel="true">
-  <ul>
-    <% (1..8).each do |i| %>
-      <li>
-       <%= render partial: 'static_pages/partenaires/partenaire_mosaique', locals: { i:i} %>
-        <%#= image_tag t("partenaire-#{i}.image"), class: "center-block", alt: t("partenaire-#{i}.name") %>
-      </li>
-    <% end  %>
-
-  </ul>
-</div>
+<%= render "static_pages/partenaires/partenaire_carousel" %>
 
 
 
