carousel multi slide boutons & background

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -123,9 +123,12 @@
 
 }
 
-// PAGE PARTENAIRES
+// CAROUSEL PARTENAIRES
 
+.carousel-partenaires {
+  background-color: rgba(0, 0, 0, 0.5);
 
+}
 
 
 
