--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -21,7 +21,7 @@
 
   <div class="row">
     <div class="col-md-12">
-      <%= image_tag "Header_Home.png", class: "img-responsive" %>
+      <%= image_tag "Header_Home_new.png", class: "img-responsive" %>
     </div>
   </div>
 
