--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -20,7 +20,7 @@
 </div>
 
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-12 home-banniere">
       <%= image_tag "Header_Home_new.png", class: "img-responsive" %>
     </div>
   </div>
