logo EGC bootom home

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -144,7 +144,7 @@
 
 
     <div class="col-md-3">
-      <%= image_tag "LOGO_BLACK_EGC.png", height: "80", class: "center-block" %>
+      <%= image_tag "LOGO_LONG_BLACK_EGC-mini.png", height: "80", class: "center-block img-responsive" %>
       <div class="text-center small">© EvryGamesCity</div>
     </div>
 
