center panel-headings

--- a/app/views/static_pages/contact_egc.html.erb
+++ b/app/views/static_pages/contact_egc.html.erb
@@ -11,7 +11,7 @@
 
 <div class="panel transparent">
 
-  <div class="panel-heading">
+  <div class="panel-heading text-center">
     <h4 class="contact-contact-title"><%= t(:nouscontacter) %></h4>
   </div>
  
