--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -30,7 +30,7 @@
 
 
       <div class="panel transparent">
-      <div class="panel-heading">
+      <div class="panel-heading text-center">
         <h4>Horaires</h4>
       </div>
       <div class="panel-body">
@@ -40,7 +40,7 @@
     </div>
 
     <div class="panel transparent">
-      <div class="panel-heading">
+      <div class="panel-heading text-center">
         <!--div class="anchor">
           <a name="<%#= infotag %>"> </a>
         </div-->
@@ -55,7 +55,7 @@
 
 
     <div class="panel transparent">
-      <div class="panel-heading">
+      <div class="panel-heading text-center">
         <h4>Accès</h4>
       </div>
       <div class="panel-body">
@@ -80,7 +80,7 @@
     </div>
 
     <div class="panel transparent">
-      <div class="panel-heading">
+      <div class="panel-heading text-center">
         <h4>Tarifs</h4>
       </div>
       <div class="panel-body">
@@ -112,7 +112,7 @@
   <div class="col-md-12">
 
     <div class="panel transparent"><!-- Services -->
-      <div class="panel-heading">
+      <div class="panel-heading text-center">
         <h4>Services</h4>
       </div>
       <div class="panel-body">
