--- a/app/views/jeux/_jeu_subsection.html.erb
+++ b/app/views/jeux/_jeu_subsection.html.erb
@@ -1,5 +1,5 @@
 <div class="panel transparent">
-  <div class="panel-heading">
+  <div class="panel-heading text-center">
     <h4 class=<%= categ %>><%= t(categ) %></h4>
   </div>
   <div class="panel-body">
