--- a/app/views/jeux/lol.html.erb
+++ b/app/views/jeux/lol.html.erb
@@ -11,7 +11,7 @@
 
 
 <div class="panel transparent">
-  <div class="panel-heading">
+  <div class="panel-heading text-center">
     <h4>Règles</h4>
   </div>
   <div class="panel-body">
