--- a/app/views/static_pages/contact_egs.html.erb
+++ b/app/views/static_pages/contact_egs.html.erb
@@ -12,7 +12,7 @@
 
 <div class="panel transparent">
 
-  <div class="panel-heading">
+  <div class="panel-heading text-center">
     <h4 class="contact-presentation-title"><%= t(:presentation) %></h4>
   </div>
  
@@ -25,7 +25,7 @@
 
 <div class="panel transparent">
 
-  <div class="panel-heading">
+  <div class="panel-heading text-center">
     <h4 class="contact-contact-title"><%= t(:nouscontacter) %></h4>
   </div>
  
