--- a/app/views/static_pages/contacts/_contact.html.erb
+++ b/app/views/static_pages/contacts/_contact.html.erb
@@ -8,7 +8,7 @@
 
 <div class="panel transparent">
 
-  <div class="panel-heading">
+  <div class="panel-heading text-center">
     <h4 class="contact-presentation-title"><%= t(:presentation) %></h4>
   </div>
  
