--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -75,8 +75,8 @@ h1, .h1, h2, .h2, h3, .h3 {
 
 
 .panel-heading {
-  //font-family: 'eurostyle-bold';
-  font-family: 'bebas';
+  font-family: 'eurostyle-bold';
+  //font-family: 'bebas';
   background-color: $orange !important;
 }
 .panel-body {
