titres de box en majuscule

--- a/app/views/jeux/csgo.html.erb
+++ b/app/views/jeux/csgo.html.erb
@@ -12,7 +12,7 @@
 
 <div class="panel transparent">
   <div class="panel-heading text-center">
-    <h4>Règles</h4>
+    <h4>REGLES</h4>
   </div>
   <div class="panel-body">
     <h2>Tournoi 16 slots avec des qualifications online.</h3>
