--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -31,7 +31,7 @@
 
       <div class="panel transparent">
       <div class="panel-heading text-center">
-        <h4>Horaires</h4>
+        <h4>HORAIRES</h4>
       </div>
       <div class="panel-body">
         <p>Samedi 25 et Dimanche 26 Avril 2015<br />
@@ -45,7 +45,7 @@
           <a name="<%#= infotag %>"> </a>
         </div-->
        <!--h4 class="info-title" name="<%#= infotag %>"><%#= t("#{infotag}.name") %> </h4-->
-        <h4>Déroulement de la LAN</h4>
+        <h4>DEROULEMENT DE LA LAN</h4>
       </div>
       <div class="panel-body">
         <p>Samedi 25 Avril : phases de qualification<br />
@@ -56,7 +56,7 @@
 
     <div class="panel transparent">
       <div class="panel-heading text-center">
-        <h4>Accès</h4>
+        <h4>ACCES</h4>
       </div>
       <div class="panel-body">
         <p><h3>Adresse :</h3> Arènes de l'Agora, 91000 Évry.<br /><br />
@@ -81,7 +81,7 @@
 
     <div class="panel transparent">
       <div class="panel-heading text-center">
-        <h4>Tarifs</h4>
+        <h4>TARIFS</h4>
       </div>
       <div class="panel-body">
         <p><h3>Public :</h3>
@@ -113,7 +113,7 @@
 
     <div class="panel transparent"><!-- Services -->
       <div class="panel-heading text-center">
-        <h4>Services</h4>
+        <h4>SERVICES</h4>
       </div>
       <div class="panel-body">
         <p>Des serveurs funs seront mis en place pour tous ceux qui souhaitent se détendre entre 2 parties ou tout simplement jouer avec les personnes présentes :</p>
