--- a/app/views/jeux/sc2.html.erb
+++ b/app/views/jeux/sc2.html.erb
@@ -12,7 +12,7 @@
 
 <div class="panel transparent">
   <div class="panel-heading text-center">
-    <h4>Règles</h4>
+    <h4>REGLES</h4>
   </div>
   <div class="panel-body">
     <h2>Tournois 16 slots sur inscriptions.</h3>
