evenement au lieu de l evenement

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,7 +37,7 @@
           </ul>
         </li-->
         <li class="<%= set_active("presentation")%>">
-          <a class="navlink" href="/presentation">L'EVENEMENT</a>
+          <a class="navlink" href="/presentation">EVENEMENT</a>
         </li>
         <li class="<%= set_active("informations")%>">
           <a class="navlink" href="/informations"><%= t(:informations)%></a>
