--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -93,7 +93,7 @@
           Tarif réduit - étudiant : 11€<br />
           Journée du samedi pour tous : 16€<br />
         <h3>Joueurs :</h3>
-          Préinsciption : 50 € par équipe 
+          Préinsciption : 35 € par joueur 
         </p> 
       </div>
     </div>
