--- a/app/views/static_pages/partenaires/_partenaire_carousel.html.erb
+++ b/app/views/static_pages/partenaires/_partenaire_carousel.html.erb
@@ -12,7 +12,7 @@
         <div class="row">
           <% display_a = (i..nbpart).to_a.concat((1..(i - 1)).to_a).take(nb_display) %>
           <% display_a.each do |j| %>
-            <div class="col-md-2">
+            <div class="col-md-2 mosaique-container">
               <%#= image_tag t("partenaire-#{j}.image"),
                             class: "img-responsive center-block",
                             alt: t("partenaire-#{j}.name") %>               
