--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -7,6 +7,8 @@
   float: left; 
 }
 
+// HOME PAGE
+
 .mosaique {
   margin: 0px;
   padding: 10px;
@@ -37,6 +39,8 @@
 
 .home-banniere {
   margin-top: -10px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .home-footer {
