--- a/app/views/static_pages/home/_carousel.html.erb
+++ b/app/views/static_pages/home/_carousel.html.erb
@@ -39,9 +39,11 @@
  
   <!-- Controls -->
   <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
+    <!--span class="glyphicon glyphicon-chevron-left"></span-->
+    <%= image_tag "Fleche_gauche.png", class: "left-control control" %>
   </a>
   <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
+    <!--span class="glyphicon glyphicon-chevron-right"></span-->
+    <%= image_tag "Fleche_droite.png", class: "right-control control" %>
   </a>
 </div> <!-- Carousel -->
