--- a/app/views/static_pages/partenaires/_partenaire_carousel.html.erb
+++ b/app/views/static_pages/partenaires/_partenaire_carousel.html.erb
@@ -25,10 +25,12 @@
   </div><!-- carousel inner -->
 
   <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
+    <!--span class="glyphicon glyphicon-chevron-left"></span-->
+    <%= image_tag "Fleche_gauche.png", class: "control" %>
   </a>
   <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
+    <!--span class="glyphicon glyphicon-chevron-right"></span-->
+    <%= image_tag "Fleche_droite.png", class: "control" %>
   </a>
 </div>
 
