--- a/app/views/static_pages/home/_carousel.html.erb
+++ b/app/views/static_pages/home/_carousel.html.erb
@@ -6,6 +6,7 @@
     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
     <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
   </ol>
  
   <!-- Wrapper for slides -->
@@ -35,6 +36,13 @@
           <h3></h3>
       </div>
     </div>
+    <div class="item">
+      <%= image_tag "SlideShow_EGC_5.jpg", alt: "..." %>
+      <div class="carousel-caption">
+          <h3></h3>
+      </div>
+    </div>
+
   </div>
  
   <!-- Controls -->
